force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Additional_Field__c/agf__ADM_Additional_Field__c.object-meta.xml
<CustomObject>
    <label>Additional Field</label>
    <nameField>
        <label>Additional Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>