force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Additional_Field__c/fields/agf__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>