force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Additional_Field__c/fields/agf__Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>