force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Additional_Field__c/fields/agf__User_Story_Setting__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Story_Setting__c</fullName>
    <label>User Story Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>