force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Additional_Field__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>